Fix exception handling and resource leaks per Nuxeo guidelines
ServiceCall:
- keep the cause when logging failures in get() and postOrPut(): the
  throwable is now passed to log.error() instead of only e.getMessage(),
  so the stack trace is no longer lost
- uploadFileWithPut() logged the throwable as a format parameter, which
  also dropped the stack trace
- uploadFileWithPut() never disconnected its HttpURLConnection, unlike
  get()/postOrPut(); it is now released in a finally block
- use Files.newInputStream() instead of new FileInputStream()
- drop the dead "connection = null" assignments in the finally blocks

AuthenticationToken:
- URLEncoder.encode(s, StandardCharsets.UTF_8) instead of the String
  charset overload, which removes the unreachable
  UnsupportedEncodingException catch

CICAgenticAgentLookupListener:
- replace "catch (NuxeoException) { throw e; } catch (Exception)" by a
  single catch of OperationException, the only checked exception that
  AutomationService.run() can throw

HylandKEServiceImpl / HylandDCServiceImpl:
- extract sleepBetweenPullAttempts(), mirroring the existing helper in
  HylandKDServiceImpl, so all three polling loops share the same
  interrupt handling

These files also carry the formatting changes of the following commit.